Fix overflow scrolling

--- a/resources/scss/components/canvas.scss
+++ b/resources/scss/components/canvas.scss
@@ -6,6 +6,7 @@
     }
 
     &__canvas {
+        display: block;
         width: 100vw;
         height: 100vh;
     }
